syntax = "proto3";

package grpc;

option go_package = "github.com/mgjules/deckr/grpc;grpc";

// DeckOpened represents a opened deck of cards.
message DeckOpened {
  string id = 1;
  bool shuffled = 2;
  uint32 remaining = 3;
  repeated Card cards = 4;
}

// DeckClosed represents a closed deck of cards.
message DeckClosed {
  string id = 1;
  bool shuffled = 2;
  uint32 remaining = 3;
}

// Card represents a single card.
message Card {
  string value = 1;
  string suit = 2;
  string code = 3;
}
